Swapped from Futura to Lato

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,7 +6,7 @@ body {
     margin: 40px auto;
     line-height: 1.6;
     font-size: 18px;
-    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-family: 'Lato', "Trebuchet MS", Arial, sans-serif;
     color: #444;
     display: block;
 }
