Jekyll works now, Will is no longer a dumbfuck

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,2 +1,4 @@
-<html>
-<header><a href="http://www.google.com">click here for google</a></header>
+<header>
+    <h1>William Hirsch</h1>
+    
+</header>
