Contact page, nav bar, and other
Includes are now a lot bigger,
404 page is more comprehensive.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,17 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+</head>
+
+<body>
 <header>
     <h1>William Hirsch</h1>
-    
+    <ul class="navbar">
+        <li><a href="./">Home</a></li>
+        <li><a href="./contact.html">Contact Me</a></li>
+    </ul>
 </header>
