--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-<header>
-    <h1>William Hirsch</h1>
-    <ul class="navbar">
-        <li><a href="./">Home</a></li>
-        <li><a href="./contact.html">Contact Me</a></li>
-    </ul>
-</header>
+    <header>
+        <h1>William Hirsch</h1>
+        <nav>
+            <a href="#" id="menu-icon"></a>
+            <ul>
+                <li><a href="./">Home</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
