--- a/stylesheet.css
+++ b/stylesheet.css
@@ -39,10 +39,11 @@ ul {
     list-style-type: none;    
     margin: 0;
     padding: 0;
+    background-color: #ddd;
+    
 }
 
-ul.navbar {
-    background-color: #ddd;
+nav ul {
     width: 200px;
 }
 
@@ -50,7 +51,12 @@ li a {
     display: block;
     padding: 8px 16px;
     text-decoration: none;
-    color: #444
+    color: #444;
+    border-bottom: 1px solid #555;
+}
+
+li:last-child a {
+    border-bottom: none;
 }
 
 li a:hover {
@@ -58,50 +64,80 @@ li a:hover {
     color: #eee;
 }
 
+#menu-icon{
+    display: none;
+    width: 40px;
+    height: 40px;
+    background: #808080 url(./img/menu-icon.png) center;
+}
+
+a:hover#menu-icon {
+    background-color: #444;
+    border-radius: 4px 4px 0 0;
+}
+
 @media print,
-screen and (max-width: 960px) {
-    div.wrapper {
-        width: auto;
-        margin: 0
+screen and (max-width: 1080px) {
+    body{
+        padding: 15px;
     }
+    
     header,
     content,
     footer {
         float: none;
         position: static;
-        width: auto
+        width: auto;
     }
-    header {
-        padding-right: 320px
+    
+    header h1 {
+        text-align: center;
     }
+    
     content {
         border: 1px solid #e5e5e5;
         border-width: 1px 0;
         padding: 20px 0;
         margin: 0 0 20px
     }
+    
     header a small {
-        display: inline
+        display: inline;
     }
-    header ul {
-        position: absolute;
-        right: 50px;
-        top: 52px
+    
+    nav ul {
+        width: auto;
+        height: auto;
+        position: relative;
+        overflow: auto;
+    }
+    
+    nav ul li {
+        float: left;
+        padding: 15px;
+    }
+    
+    nav ul li a {
+        border-bottom: none;
     }
 }
 
 @media print,
-screen and (max-width: 720px) {
+screen and (max-width: 890px) {
     body {
-        word-wrap: break-word
+        word-wrap: break-word;
+        width:auto;
     }
+    
     header {
         padding: 0
     }
+    
     header ul,
     header p.view {
         position: static
     }
+    
     pre,
     code {
         word-wrap: normal
@@ -109,8 +145,39 @@ screen and (max-width: 720px) {
 }
 
 @media print,
-screen and (max-width: 480px) {
+screen and (max-width: 640px) {
     body {
         padding: 15px
     }
+    
+    #menu-icon {
+		display:block;
+        position: fixed;
+        top: 142px;
+        right: 15px;
+       
+	}
+    
+    nav ul{ 
+		display: none;
+		position: fixed;
+		padding: 20px 15px;
+		background: #fff;
+		border: 5px solid #808080;
+		right: 15px;
+		top: 182px;
+		width: 50%;
+		border-radius: 4px 0 4px 4px;
+	}
+    
+    nav ul li {
+		text-align: center;
+		width: 100%;
+		padding: 0;
+		margin: 0;
+	}
+
+	nav:hover ul {
+		display: block;
+	}
 }
