Added Accessibility Menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+    <script type="text/javascript">
+        var _userway_config = {
+            account: 'jBOS5KrR6B'
+        };
+    </script>
+    <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>
     <header>
         <h1>William Hirsch</h1>
         {% include navigation.html %}
