--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
+{%- if page.subtitle %}<em>{{ page.subtitle }}</em>{% endif -%}
 <p>{{ page.date | date_to_string }}</p>
 
 {{ content }}
