Add email and git to the footer

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -341,8 +341,8 @@ body {
       a {
         display: block;
         padding: 10px 12px;
-        border: 1px solid $border-color-01;
-        &:hover { border-color: $border-color-02 }
+        border: 1px solid $gruv-bg5;
+        &:hover { border-color: $gruv-bg4 }
       }
     }
   }
