--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,6 @@
             {{ content }}
         </div>
     </main>
-    <!-- {%- include footer.html -%} -->
+    {%- include footer.html -%}
 </body>
 </html>
